# rustic-rhythms

./: .gitignore  Cargo.toml  index.html  mise.toml
src/: inference.rs  lib.rs  preprocess.rs
