[package]
name = "rustic_rhythms"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
rmp-serde = "1.3.0"
serde = { version = "1.0.219", default-features = false, features = [
    "derive",
    "alloc",
    ] }
# Wasm dependencies
wasm-bindgen = "0.2"
getrandom = { version = "0.3.3", default-features = false, features = [
    "wasm_js"] }
[dependencies.web-sys]
version = "0.3.4"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
]

